--- a/ToolBoxGDNNew/GDN_Toolbox/GDN_Toolbox/Properties/Resources.resx
+++ b/ToolBoxGDNNew/GDN_Toolbox/GDN_Toolbox/Properties/Resources.resx
@@ -118,34 +118,19 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
+  <data name="518-5186675_computer-icons-user-avatar-icon-design-login-user-removebg-preview" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Pictures\Avatar\518-5186675_computer-icons-user-avatar-icon-design-login-user-removebg-preview.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="CloseButtonPictureClear" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Pictures\Border\CloseButtonPictureClear.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="Logo1" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Pictures\Logo\Logo.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="GNA" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Pictures\Logo\GNA.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="MinimizeButtonPictureClear" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Pictures\Border\MinimizeButtonPictureClear.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="518-5186675_computer-icons-user-avatar-icon-design-login-user-removebg-preview" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Pictures\Avatar\518-5186675_computer-icons-user-avatar-icon-design-login-user-removebg-preview.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="logo gdn 1 icon" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\logo gdn 1 icon.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="CloseButtonPicture1" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Pictures\Border\CloseButtonPicture.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="MinimizeButtonPicture" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Pictures\Border\MinimizeButtonPicture.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="CloseButtonPicture" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Pictures\Border\CloseButtonPicture.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="Logo" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Pictures\Logo\Logo.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="logo gdn 1 icon1" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\logo gdn 1 icon1.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="GNA1" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Pictures\Logo\GNA.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
 </root>
